--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "chirp-chirp",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "chirp.js",
   "dependencies": {},
   "devDependencies": {
     "chai": "^3.5.0",
     "mocha": "^2.4.5"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+     "test": "./node_modules/.bin/mocha --watch"
   },
   "repository": {
     "type": "git",
